<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Painel.PainelActivity">

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/txtLogout"
        android:id="@+id/btnLogout" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/txtSolicitacoes"
        android:id="@+id/btnSolicitações" />
    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="MENSAGENS"
        android:id="@+id/btnMensagens" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btnUsuarios"
        android:id="@+id/btnUsuarios" />
</LinearLayout>
