<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main.MainActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:id="@+id/layoutMenu">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_login"
            android:id="@+id/btnPerfil" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_consulta"
            android:id="@+id/btnConsulta" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_renovacao"
            android:id="@+id/btnRenovacao"
            android:textColor="#ececec"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_guia"
            android:id="@+id/btnGuia"
            android:textColor="#ececec" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/layoutEmprestado"
        android:background="#d5e9f5"
        android:elevation="4dp"
        android:padding="4dp"
        android:orientation="vertical"
        android:layout_below="@+id/layoutMenu">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="Mais emprestado na semana:"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/layoutComentado"
        android:orientation="vertical"
        android:background="#d5e9f5"
        android:padding="4dp"
        android:elevation="4dp"
        android:layout_below="@+id/layoutEmprestado">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="Mais comentado na semana:"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:elevation="4dp"
        android:layout_above="@+id/layoutEmprestado"
        android:layout_below="@+id/btnMainMain"
        android:layout_toRightOf="@+id/layoutMenu"
        android:layout_alignParentRight="true"
        android:background="#f7d7d7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="AVISOS:"/>
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMainMain"
        android:layout_toLeftOf="@+id/btnMainMsg" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMainMsg"
        android:layout_toLeftOf="@+id/btnMainSol" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMainSol"
        android:layout_toLeftOf="@+id/btnMainPain" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMainPain"
        android:layout_alignParentRight="true" />


</RelativeLayout>

